Editor: fix file header visibility

--- a/app/stylesheets/builtin-pages/components/editor.less
+++ b/app/stylesheets/builtin-pages/components/editor.less
@@ -1,17 +1,13 @@
 #el-editor-container {
-  display: none;
   position: absolute;
   top: 0;
   left: 400px;
   right: 0;
   bottom: 0;
-
-  &.active {
-    display: block;
-  }
 }
 
-#el-editor-container .editor, .fileview {
+#el-editor-container .editor,
+#el-editor-container .fileview {
   display: none;
 
   &.active {
